--- a/ChessUi/ChessUi.csproj
+++ b/ChessUi/ChessUi.csproj
@@ -82,6 +82,12 @@
     <Compile Include="ColorForm.Designer.cs">
       <DependentUpon>ColorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FenForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FenForm.Designer.cs">
+      <DependentUpon>FenForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VisibleBoard.cs" />
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ColorForm.resx">
       <DependentUpon>ColorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FenForm.resx">
+      <DependentUpon>FenForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
